@@ -7,22 +7,22 @@ import com.endava.cats.fuzzer.api.Fuzzer;
 import com.endava.cats.generator.simple.StringGenerator;
 import com.endava.cats.generator.simple.UnicodeGenerator;
 import com.endava.cats.io.ServiceCaller;
-import com.endava.cats.json.JsonUtils;
 import com.endava.cats.model.CatsHeader;
 import com.endava.cats.model.CatsRequest;
 import com.endava.cats.model.CatsResponse;
 import com.endava.cats.model.FuzzingData;
-import com.endava.cats.model.KeyValuePair;
 import com.endava.cats.report.TestCaseListener;
 import com.endava.cats.strategy.FuzzingStrategy;
-import com.endava.cats.util.CatsUtil;
 import com.endava.cats.util.ConsoleUtils;
+import com.endava.cats.util.JsonUtils;
+import com.endava.cats.util.KeyValuePair;
 import com.jayway.jsonpath.JsonPathException;
 import io.github.ludovicianul.prettylogger.PrettyLogger;
 import io.github.ludovicianul.prettylogger.PrettyLoggerFactory;
-
 import jakarta.inject.Singleton;
+
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -32,28 +32,40 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
+import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
+/**
+ * Fuzzer that will do fuzzing based on a supplied template, rather than an OpenAPI Spec.
+ */
 @Singleton
 @SpecialFuzzer
 public class TemplateFuzzer implements Fuzzer {
+    public static final String EMPTY = "";
     private final PrettyLogger logger = PrettyLoggerFactory.getLogger(TemplateFuzzer.class);
     private final ServiceCaller serviceCaller;
     private final TestCaseListener testCaseListener;
-    private final CatsUtil catsUtil;
     private final UserArguments userArguments;
     private final MatchArguments matchArguments;
 
-    public TemplateFuzzer(ServiceCaller sc, TestCaseListener lr, CatsUtil cu, UserArguments ua, MatchArguments ma) {
+    /**
+     * Constructs a new TemplateFuzzer instance.
+     *
+     * @param sc The service caller used to make requests to the service under test.
+     * @param lr The test case listener used to report test case results and progress.
+     * @param ua The UserArguments object containing the user-specified arguments for the fuzzer.
+     * @param ma The MatchArguments object containing the match criteria for identifying valid responses.
+     */
+    public TemplateFuzzer(ServiceCaller sc, TestCaseListener lr, UserArguments ua, MatchArguments ma) {
         this.serviceCaller = sc;
         this.testCaseListener = lr;
-        this.catsUtil = cu;
         this.userArguments = ua;
         this.matchArguments = ma;
     }
 
     @Override
     public void fuzz(FuzzingData data) {
+        testCaseListener.updateUnknownProgress(data);
         for (String targetField : Optional.ofNullable(data.getTargetFields()).orElse(Collections.emptySet())) {
             int payloadSize = this.getPayloadSize(data, targetField);
 
@@ -67,6 +79,7 @@ public class TemplateFuzzer implements Fuzzer {
                     List<KeyValuePair<String, Object>> replacedHeaders = this.replaceHeaders(data, payload, targetField);
                     String replacedPayload = this.replacePayload(data, payload, targetField);
                     String replacedPath = this.replacePath(data, payload, targetField);
+
                     CatsRequest catsRequest = CatsRequest.builder()
                             .payload(replacedPayload)
                             .headers(replacedHeaders)
@@ -74,16 +87,21 @@ public class TemplateFuzzer implements Fuzzer {
                             .url(replacedPath)
                             .build();
 
-                    testCaseListener.createAndExecuteTest(logger, this, () -> process(data, catsRequest, targetField, payload));
+                    testCaseListener.createAndExecuteTest(logger, this, () -> process(data, catsRequest, targetField, payload), data);
+                    testCaseListener.updateUnknownProgress(data);
                 }
             }
         }
     }
 
     String replacePath(FuzzingData data, String withData, String targetField) {
+        if (userArguments.isSimpleReplace()) {
+            return data.getPath().replace(targetField, Optional.ofNullable(withData).orElse(EMPTY));
+        }
+
         String finalPath = data.getPath();
         try {
-            URL url = new URL(data.getPath());
+            URL url = URI.create(data.getPath()).toURL();
             String replacedPath = Arrays.stream(url.getPath().split("/"))
                     .map(pathElement -> pathElement.equalsIgnoreCase(targetField) ? withData : pathElement)
                     .collect(Collectors.joining("/"));
@@ -105,7 +123,7 @@ public class TemplateFuzzer implements Fuzzer {
     }
 
     String replaceQueryParam(String targetField, String queryPair, String withValue) {
-        String[] queryPairArr = queryPair.split("=");
+        String[] queryPairArr = queryPair.split("=", -1);
         if (queryPairArr[0].equalsIgnoreCase(targetField) && queryPairArr.length == 2) {
             return queryPairArr[0] + "=" + withValue;
         } else if (queryPair.equalsIgnoreCase(targetField)) {
@@ -122,10 +140,14 @@ public class TemplateFuzzer implements Fuzzer {
                 payloads.add(UnicodeGenerator.getZalgoText());
                 payloads.add(StringGenerator.generateLargeString(20000));
                 payloads.add(null);
-                payloads.add("");
+                payloads.add(EMPTY);
                 return payloads;
             } else {
-                return Files.readAllLines(Path.of(userArguments.getWords().getAbsolutePath()), StandardCharsets.UTF_8);
+                return Files.readAllLines(Path.of(userArguments.getWords().getAbsolutePath()), StandardCharsets.UTF_8)
+                        .stream()
+                        .filter(Predicate.not(String::isBlank))
+                        .filter(Predicate.not(line -> line.startsWith("# ")))
+                        .toList();
             }
         } catch (IOException e) {
             logger.debug("Something went wrong while fuzzing!", e);
@@ -143,15 +165,18 @@ public class TemplateFuzzer implements Fuzzer {
     }
 
     private String replacePayload(FuzzingData data, String withData, String targetField) {
+        if (userArguments.isSimpleReplace()) {
+            return data.getPayload().replace(targetField, withData);
+        }
         try {
-            return catsUtil.replaceField(data.getPayload(), targetField, FuzzingStrategy.replace().withData(withData)).json();
+            return FuzzingStrategy.replaceField(data.getPayload(), targetField, FuzzingStrategy.replace().withData(withData)).json();
         } catch (JsonPathException e) {
             return data.getPayload();
         }
     }
 
     private int getPayloadSize(FuzzingData data, String field) {
-        String oldValue = data.getPath().contains(field) ? "CATS_FUZZ" : "";
+        String oldValue = data.getPath().contains(field) ? "CATS_FUZZ" : EMPTY;
 
         if (oldValue.isEmpty()) {
             oldValue = String.valueOf(JsonUtils.getVariableFromJson(data.getPayload(), field));
@@ -161,33 +186,54 @@ public class TemplateFuzzer implements Fuzzer {
                     .filter(header -> header.getName().equalsIgnoreCase(field))
                     .map(CatsHeader::getValue)
                     .findFirst()
-                    .orElse("");
+                    .orElse(EMPTY);
+        }
+        if (oldValue.isEmpty()) {
+            oldValue = data.getPayload().contains(field) ? "CATS_FUZZ" : EMPTY;
         }
 
         return oldValue.length();
     }
 
-    private void process(FuzzingData data, CatsRequest catsRequest, String targetField, String fuzzValued) {
-        testCaseListener.addScenario(logger, "Replace request field, header or path/query param [{}], with [{}]", targetField, FuzzingStrategy.replace().withData(fuzzValued).truncatedValue());
-        testCaseListener.addExpectedResult(logger, "Should get a valid response from the service");
+    private void process(FuzzingData data, CatsRequest catsRequest, String targetField, String fuzzedValue) {
+        testCaseListener.addScenario(logger, "Replace request field, header or path/query param [{}], with [{}]", targetField, FuzzingStrategy.replace().withData(fuzzedValue).truncatedValue());
+        testCaseListener.addExpectedResult(logger, "Should get a response that doesn't match given arguments");
         testCaseListener.addRequest(catsRequest);
         testCaseListener.addPath(catsRequest.getUrl());
-        testCaseListener.addContractPath(catsRequest.getUrl());
-        testCaseListener.addContractPath(catsRequest.getUrl());
+        testCaseListener.addContractPath(data.getContractPath());
         testCaseListener.addFullRequestPath(catsRequest.getUrl());
+        long startTime = System.currentTimeMillis();
+
         try {
             CatsResponse catsResponse = serviceCaller.callService(catsRequest, Set.of(targetField));
-            if (matchArguments.isMatchResponse(catsResponse) || !matchArguments.isAnyMatchArgumentSupplied()) {
-                testCaseListener.addResponse(catsResponse);
-                testCaseListener.reportResultError(logger, data, "Check response details", "Service call completed. Please check response details.");
-            } else {
-                testCaseListener.skipTest(logger, "Skipping test as response does not match given matchers!");
-            }
+            checkResponse(catsResponse, data, fuzzedValue);
+        } catch (IOException e) {
+            long duration = System.currentTimeMillis() - startTime;
+            CatsResponse.ExceptionalResponse exceptionalResponse = CatsResponse.getResponseByException(e);
+
+            CatsResponse catsResponse = CatsResponse.builder()
+                    .body(exceptionalResponse.responseBody()).httpMethod(catsRequest.getHttpMethod())
+                    .responseTimeInMs(duration).responseCode(exceptionalResponse.responseCode())
+                    .jsonBody(JsonUtils.parseAsJsonElement(exceptionalResponse.responseBody()))
+                    .fuzzedField(targetField)
+                    .build();
+
+            checkResponse(catsResponse, data, fuzzedValue);
         } catch (Exception e) {
             logger.debug("Something unexpected happened: ", e);
             testCaseListener.reportResultError(logger, data, "Check response details", "Something went wrong {}", e.getMessage());
         }
     }
+
+    private void checkResponse(CatsResponse catsResponse, FuzzingData data, String fuzzedValue) {
+        if (matchArguments.isMatchResponse(catsResponse) || matchArguments.isInputReflected(catsResponse, fuzzedValue) || !matchArguments.isAnyMatchArgumentSupplied()) {
+            testCaseListener.addResponse(catsResponse);
+            testCaseListener.reportResultError(logger, data, "Response matches arguments", "Response matches" + matchArguments.getMatchString());
+        } else {
+            testCaseListener.skipTest(logger, "Skipping test as response does not match given matchers!");
+        }
+    }
+
 
     @Override
     public String description() {
