@@ -2,14 +2,13 @@ package com.endava.cats.fuzzer.special;
 
 import com.endava.cats.args.FilesArguments;
 import com.endava.cats.http.HttpMethod;
-import com.endava.cats.http.ResponseCodeFamily;
 import com.endava.cats.io.ServiceCaller;
 import com.endava.cats.model.CatsResponse;
 import com.endava.cats.model.FuzzingData;
 import com.endava.cats.report.TestCaseExporter;
 import com.endava.cats.report.TestCaseListener;
 import com.endava.cats.util.CatsDSLWords;
-import com.endava.cats.util.CatsUtil;
+import io.github.ludovicianul.prettylogger.PrettyLogger;
 import io.quarkus.test.junit.QuarkusTest;
 import io.quarkus.test.junit.mockito.InjectSpy;
 import io.swagger.v3.oas.models.media.StringSchema;
@@ -43,11 +42,10 @@ class FunctionalFuzzerTest {
 
     @BeforeEach
     void setup() {
-        CatsUtil catsUtil = new CatsUtil();
         serviceCaller = Mockito.mock(ServiceCaller.class);
         filesArguments = new FilesArguments();
-        customFuzzerUtil = new CustomFuzzerUtil(serviceCaller, catsUtil, testCaseListener);
-        functionalFuzzer = new FunctionalFuzzer(filesArguments, customFuzzerUtil);
+        customFuzzerUtil = new CustomFuzzerUtil(serviceCaller, testCaseListener);
+        functionalFuzzer = new FunctionalFuzzer(filesArguments, customFuzzerUtil, Mockito.mock(TestCaseListener.class));
         ReflectionTestUtils.setField(testCaseListener, "testCaseExporter", Mockito.mock(TestCaseExporter.class));
     }
 
@@ -74,7 +72,7 @@ class FunctionalFuzzerTest {
     }
 
     @Test
-    void shouldThrowExceptionWhenFileDoesNotExist() throws Exception {
+    void shouldThrowExceptionWhenFileDoesNotExist() {
         ReflectionTestUtils.setField(filesArguments, "customFuzzerFile", new File("mumu"));
 
         Assertions.assertThatThrownBy(() -> filesArguments.loadCustomFuzzerFile()).isInstanceOf(FileNotFoundException.class);
@@ -90,32 +88,31 @@ class FunctionalFuzzerTest {
         Mockito.verify(spyFunctionalFuzzer, Mockito.never()).processCustomFuzzerFile(data);
         Assertions.assertThat(functionalFuzzer.description()).isNotNull();
         Assertions.assertThat(functionalFuzzer).hasToString(functionalFuzzer.getClass().getSimpleName());
-        Assertions.assertThat(functionalFuzzer.reservedWords()).containsOnly(CatsDSLWords.EXPECTED_RESPONSE_CODE, CatsDSLWords.DESCRIPTION, CatsDSLWords.OUTPUT, CatsDSLWords.VERIFY, CatsDSLWords.MAP_VALUES,
-                CatsDSLWords.ONE_OF_SELECTION, CatsDSLWords.ADDITIONAL_PROPERTIES, CatsDSLWords.ELEMENT, CatsDSLWords.HTTP_METHOD);
+        Assertions.assertThat(functionalFuzzer.requiredKeywords()).containsOnly(CatsDSLWords.EXPECTED_RESPONSE_CODE, CatsDSLWords.DESCRIPTION, CatsDSLWords.HTTP_METHOD);
     }
 
     @Test
     void givenACustomFuzzerFileWithSimpleTestCases_whenTheFuzzerRuns_thenCustomTestCasesAreExecuted() {
-        CatsResponse catsResponse = CatsResponse.builder().body("{}").responseCode(200).build();
+        CatsResponse catsResponse = CatsResponse.builder().body("{}").responseCode(200).responseContentType("application/json").build();
         FuzzingData data = this.setupFuzzingData(catsResponse, "newValue", "newValue2");
         FunctionalFuzzer spyFunctionalFuzzer = Mockito.spy(functionalFuzzer);
         spyFunctionalFuzzer.fuzz(data);
         spyFunctionalFuzzer.executeCustomFuzzerTests();
 
         Mockito.verify(spyFunctionalFuzzer, Mockito.times(1)).processCustomFuzzerFile(data);
-        Mockito.verify(testCaseListener, Mockito.times(3)).reportResult(Mockito.any(), Mockito.eq(data), Mockito.eq(catsResponse), Mockito.eq(ResponseCodeFamily.TWOXX));
+        Mockito.verify(testCaseListener, Mockito.times(3)).reportResult(Mockito.any(), Mockito.eq(data), Mockito.eq(catsResponse), Mockito.argThat(arg -> arg.asString().equalsIgnoreCase("200")));
     }
 
     @Test
     void givenACustomFuzzerFileWithSimpleTestCases_whenTheFuzzerRuns_thenCustomTestCasesAreExecutedAndDatesAreProperlyParsed() {
-        CatsResponse catsResponse = CatsResponse.builder().body("{}").responseCode(200).build();
+        CatsResponse catsResponse = CatsResponse.builder().body("{}").responseCode(200).responseContentType("application/json").build();
         FuzzingData data = this.setupFuzzingData(catsResponse, "T(java.time.OffsetDateTime).now().plusDays(20)");
         FunctionalFuzzer spyFunctionalFuzzer = Mockito.spy(functionalFuzzer);
         spyFunctionalFuzzer.fuzz(data);
         spyFunctionalFuzzer.executeCustomFuzzerTests();
 
         Mockito.verify(spyFunctionalFuzzer, Mockito.times(1)).processCustomFuzzerFile(data);
-        Mockito.verify(testCaseListener, Mockito.times(2)).reportResult(Mockito.any(), Mockito.eq(data), Mockito.eq(catsResponse), Mockito.eq(ResponseCodeFamily.TWOXX));
+        Mockito.verify(testCaseListener, Mockito.times(2)).reportResult(Mockito.any(), Mockito.eq(data), Mockito.eq(catsResponse), Mockito.argThat(arg -> arg.asString().equalsIgnoreCase("200")));
     }
 
     @Test
@@ -132,30 +129,31 @@ class FunctionalFuzzerTest {
     private FuzzingData setupFuzzingData(CatsResponse catsResponse, String... customFieldValues) {
         Map<String, List<String>> responses = new HashMap<>();
         responses.put("200", Collections.singletonList("response"));
-        FuzzingData data = FuzzingData.builder().path("path1").payload("{\"field\":\"oldValue\"}").
+        FuzzingData data = FuzzingData.builder().contractPath("path1").path("path1").payload("{\"field\":\"oldValue\"}").
                 responses(responses).responseCodes(Collections.singleton("200")).reqSchema(new StringSchema()).method(HttpMethod.POST)
-                .headers(new HashSet<>()).requestContentTypes(List.of("application/json")).build();
+                .headers(new HashSet<>()).requestContentTypes(List.of("application/json"))
+                .responseContentTypes(Collections.singletonMap("200", Collections.singletonList("application/json")))
+                .build();
 
-        CatsUtil mockCatsUtil = Mockito.mock(CatsUtil.class);
         ReflectionTestUtils.setField(filesArguments, "customFuzzerDetails", createCustomFuzzerFile(customFieldValues));
         Mockito.when(serviceCaller.call(Mockito.any())).thenReturn(catsResponse);
-        customFuzzerUtil = new CustomFuzzerUtil(serviceCaller, mockCatsUtil, testCaseListener);
-        functionalFuzzer = new FunctionalFuzzer(filesArguments, customFuzzerUtil);
+        customFuzzerUtil = new CustomFuzzerUtil(serviceCaller, testCaseListener);
+        functionalFuzzer = new FunctionalFuzzer(filesArguments, customFuzzerUtil, Mockito.mock(TestCaseListener.class));
         ReflectionTestUtils.setField(filesArguments, "customFuzzerFile", new File("custom"));
 
         return data;
     }
 
     @ParameterizedTest
-    @CsvSource({"src/test/resources/functionalFuzzer.yml,TWOXX,4", "src/test/resources/functionalFuzzer-no-resp-code.yml,FOURXX,1", "src/test/resources/functionalFuzzer-resp-code-family.yml,TWOXX_GENERIC,1"})
-    void shouldMatchExpectedResultCodeFamily(String file, ResponseCodeFamily expectedResponseCode, int times) throws Exception {
+    @CsvSource({"src/test/resources/functionalFuzzer.yml,200,4", "src/test/resources/functionalFuzzer-no-resp-code.yml,400,1", "src/test/resources/functionalFuzzer-resp-code-family.yml,2XX,1"})
+    void shouldMatchExpectedResultCodeFamily(String file, String expectedResponseCode, int times) throws Exception {
         FuzzingData data = setContext(file, "{\"code\": \"200\"}");
 
         FunctionalFuzzer spyFunctionalFuzzer = Mockito.spy(functionalFuzzer);
         filesArguments.loadCustomFuzzerFile();
         spyFunctionalFuzzer.fuzz(data);
         spyFunctionalFuzzer.executeCustomFuzzerTests();
-        Mockito.verify(testCaseListener, Mockito.times(times)).reportResult(Mockito.any(), Mockito.eq(data), Mockito.any(), Mockito.eq(expectedResponseCode));
+        Mockito.verify(testCaseListener, Mockito.times(times)).reportResult(Mockito.any(), Mockito.eq(data), Mockito.any(), Mockito.argThat(arg -> arg.asString().equalsIgnoreCase(expectedResponseCode)));
     }
 
     @Test
@@ -168,8 +166,7 @@ class FunctionalFuzzerTest {
         spyFunctionalFuzzer.executeCustomFuzzerTests();
         Mockito.verify(testCaseListener, Mockito.times(1))
                 .reportResultWarn(Mockito.any(), Mockito.eq(data), Mockito.eq("Returned response code not matching expected response code"),
-                        Mockito.eq("Response matches all 'verify' parameters, but response code doesn't match expected response code: expected [{}], actual [{}]"),
-                        AdditionalMatchers.aryEq(new Object[]{"400", "200"}));
+                        Mockito.eq("Response matches all 'verify' parameters, but response code doesn't match expected response code: expected [{}], actual [{}]"), Mockito.any());
     }
 
     @Test
@@ -196,6 +193,24 @@ class FunctionalFuzzerTest {
     }
 
     @Test
+    void shouldAllowMultipleExpectedResponses() throws Exception {
+        String file = "src/test/resources/functionalFuzzer-multiple-rp.yml";
+        FuzzingData data = setContext(file, "{\"code\": \"200\"}");
+
+        filesArguments.loadCustomFuzzerFile();
+        functionalFuzzer.fuzz(data);
+        functionalFuzzer.executeCustomFuzzerTests();
+        Mockito.verify(testCaseListener, Mockito.times(1)).reportResult(Mockito.any(), Mockito.eq(data), Mockito.any(), Mockito.argThat(arg -> arg.asString().equalsIgnoreCase("200")));
+
+        data = setContext(file, "{\"code\": \"400\"}", 400);
+        Mockito.reset(testCaseListener);
+        filesArguments.loadCustomFuzzerFile();
+        functionalFuzzer.fuzz(data);
+        functionalFuzzer.executeCustomFuzzerTests();
+        Mockito.verify(testCaseListener, Mockito.times(3)).reportResult(Mockito.any(), Mockito.eq(data), Mockito.any(), Mockito.argThat(arg -> arg.asString().equalsIgnoreCase("200|400")));
+    }
+
+    @Test
     void shouldWriteRefData() throws Exception {
         FuzzingData data = setContext("src/test/resources/functionalFuzzer.yml", "{\"code\": \"200\"}");
         ReflectionTestUtils.setField(filesArguments, "createRefData", true);
@@ -218,7 +233,7 @@ class FunctionalFuzzerTest {
         filesArguments.loadCustomFuzzerFile();
         spyFunctionalFuzzer.fuzz(data);
         spyFunctionalFuzzer.executeCustomFuzzerTests();
-        Mockito.verify(testCaseListener, Mockito.times(1)).reportResult(Mockito.any(), Mockito.eq(data), Mockito.any(), Mockito.eq(ResponseCodeFamily.TWOXX));
+        Mockito.verify(testCaseListener, Mockito.times(1)).reportResult(Mockito.any(), Mockito.eq(data), Mockito.any(), Mockito.argThat(arg -> arg.asString().equalsIgnoreCase("200")));
     }
 
     @Test
@@ -229,6 +244,17 @@ class FunctionalFuzzerTest {
         spyFunctionalFuzzer.fuzz(data);
         spyFunctionalFuzzer.executeCustomFuzzerTests();
         Mockito.verify(testCaseListener, Mockito.times(3)).reportResultInfo(Mockito.any(), Mockito.any(), Mockito.eq("Response matches all 'verify' parameters"), Mockito.any());
+    }
+
+    @ParameterizedTest
+    @CsvSource({"src/test/resources/functionalFuzzer-array-replace.yml,1", "src/test/resources/functionalFuzzer-array-iterate.yml,2"})
+    void shouldReplaceArraysProperly(String file, int times) throws Exception {
+        FuzzingData data = setContext(file, "[]");
+        FunctionalFuzzer spyFunctionalFuzzer = Mockito.spy(functionalFuzzer);
+        filesArguments.loadCustomFuzzerFile();
+        spyFunctionalFuzzer.fuzz(data);
+        spyFunctionalFuzzer.executeCustomFuzzerTests();
+        Mockito.verify(testCaseListener, Mockito.times(times)).reportResultInfo(Mockito.any(), Mockito.any(), Mockito.any(), Mockito.any());
     }
 
     @Test
@@ -267,7 +293,7 @@ class FunctionalFuzzerTest {
         FuzzingData data = setContext("src/test/resources/functionalFuzzer-verify-not-set.yml", "{\"name\": {\"first\": \"Cats\"}, \"id\": \"25\"}");
         FunctionalFuzzer spyFunctionalFuzzer = Mockito.spy(functionalFuzzer);
         filesArguments.loadCustomFuzzerFile();
-        spyFunctionalFuzzer.fuzz(data);
+        testCaseListener.createAndExecuteTest(Mockito.mock(PrettyLogger.class), spyFunctionalFuzzer, () -> spyFunctionalFuzzer.fuzz(data), data);
         spyFunctionalFuzzer.executeCustomFuzzerTests();
         Mockito.verify(testCaseListener, Mockito.times(1)).reportResultError(Mockito.any(), Mockito.any(), Mockito.anyString(), Mockito.eq("The following Verify parameters were not present in the response: {}"),
                 AdditionalMatchers.aryEq(new Object[]{List.of("address")}));
@@ -283,16 +309,26 @@ class FunctionalFuzzerTest {
         Mockito.verifyNoInteractions(testCaseListener);
     }
 
-    private FuzzingData setContext(String fuzzerFile, String responsePayload) throws Exception {
+    private FuzzingData setContext(String fuzzerFile, String responsePayload) {
+        return setContext(fuzzerFile, responsePayload, 200);
+    }
+
+    private FuzzingData setContext(String fuzzerFile, String responsePayload, int responseCode) {
         ReflectionTestUtils.setField(filesArguments, "customFuzzerFile", new File(fuzzerFile));
         Map<String, List<String>> responses = new HashMap<>();
-        responses.put("200", Collections.singletonList("response"));
-        CatsResponse catsResponse = CatsResponse.from(200, responsePayload, "POST", 2);
+        responses.put(String.valueOf(responseCode), Collections.singletonList("response"));
+        CatsResponse catsResponse = CatsResponse.builder()
+                .responseCode(responseCode).body(responsePayload).httpMethod("POST")
+                .responseTimeInMs(2)
+                .responseContentType("application/json")
+                .build();
 
-        FuzzingData data = FuzzingData.builder().path("/pets/{id}/move").payload("{\"pet\":\"oldValue\", \"name\":\"dodo\"}").
-                responses(responses).responseCodes(Collections.singleton("200")).reqSchema(new StringSchema()).method(HttpMethod.POST)
+        FuzzingData data = FuzzingData.builder().contractPath("/pets/{id}/move").path("/pets/{id}/move").payload("{\"pet\":\"oldValue\", \"name\":\"dodo\",\"key_ops\":[\"1\",\"2\"]}").
+                responses(responses).responseCodes(Collections.singleton(String.valueOf(responseCode))).reqSchema(new StringSchema()).method(HttpMethod.POST)
                 .headers(new HashSet<>())
-                .requestContentTypes(List.of("application/json")).build();
+                .requestContentTypes(List.of("application/json"))
+                .responseContentTypes(Collections.singletonMap(String.valueOf(responseCode), Collections.singletonList("application/json")))
+                .build();
         Mockito.when(serviceCaller.call(Mockito.any())).thenReturn(catsResponse);
 
         return data;
@@ -306,6 +342,7 @@ class FunctionalFuzzerTest {
         tests.put("field", Arrays.asList(customFieldValues));
         tests.put("expectedResponseCode", "200");
         tests.put("httpMethod", "POST");
+        tests.put("description", "some description");
 
         path.put("test1", tests);
         path.put("test2", tests);
